Сохранение всех изменений: CompanyMiner функциональность, изменения в контроллерах, шаблонах и конфигурации